# Caravan

./: .gitignore  Caravan.opam  OrchCaml.opam  README.md  all_tools.ml  dune-project
.github/workflows/: ci.yml  deploy.yml
docs/: architecture.md  configuration.md  example_config.toml
examples/heterogeneous_agent_swarms/: README.md  config.toml  swarm.ml
examples/homogeneous_agent_swarms/: README.md  config.toml  dune  swarm.ml
lib/: agent.ml  caravan_error.ml  caravan_error.mli  chain.ml  config.ml  document.ml  dune  effects.ml  effects.mli  formatter.ml  mcp.ml  memory.ml  memory.mli  monitor.ml  parser.ml  permission.ml  permission.mli  prompt.ml  provider.ml  redis_store.ml  redis_store.mli  session.ml  session.mli  subagent.ml  subagent.mli  template.ml  tool.ml  types.ml  ui.ml  value.ml  value.mli
lib/providers/: dune  llama_cpp.ml  ollama.ml  openai.ml  openai_compatible.ml
lib/tools/: bash.ml  delegate.ml  dune  fetch.ml  finish.ml  gen_tools.ml  grep.ml  ls.ml  mkdir.ml  read_file.ml  search.ml  sed.ml  touch.ml  write_file.ml
scripts/: render_docs.sh
test/: dune  test_Caravan.ml  test_OrchCaml.ml
