(library
 (name Caravan)
 (libraries
  unix
  eio
  eio_main
  cohttp-eio
  uri
  yojson
  re
  otoml
  fmt
  redis-sync
  ppx_yojson_conv_lib)
 (preprocess
  (pps ppx_let ppx_yojson_conv))
 (modules
  Config
  Types
  Document
  Formatter
  Memory
  Parser
  Ui
  Monitor
  Provider
  Tool
  Session
  Prompt
  Template
  Agent
  Chain
  Mcp
  Redis_store))
